# simple-mirror

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: windows.yml
resources/locales/de/LC_MESSAGES/: simple-mirror.ts
resources/locales/es/LC_MESSAGES/: simple-mirror.ts
resources/locales/fr/LC_MESSAGES/: simple-mirror.ts
resources/locales/it/LC_MESSAGES/: simple-mirror.ts
resources/locales/ja/LC_MESSAGES/: simple-mirror.ts
resources/locales/nl/LC_MESSAGES/: simple-mirror.ts
resources/locales/pt/LC_MESSAGES/: simple-mirror.ts
resources/locales/qm/: .gitkeep
resources/locales/ts/: simple-mirror_de.ts  simple-mirror_es.ts  simple-mirror_fr.ts  simple-mirror_it.ts  simple-mirror_ja.ts  simple-mirror_nl.ts  simple-mirror_pt.ts  simple-mirror_zh_CN.ts
resources/locales/zh_CN/LC_MESSAGES/: simple-mirror.ts
scripts/: collect-win-dlls.sh  simple-mirror-installer.nsi
src/: DirectoryChooserWidget.cpp  DirectoryChooserWidget.hpp  MainWindow.cpp  MainWindow.hpp  RsyncRunner.cpp  RsyncRunner.hpp  main.cpp
src/controllers/: RsyncRunner.cpp  RsyncRunner.hpp
src/utils/: AppSetup.cpp  AppSetup.hpp  Settings.cpp  Settings.hpp
src/views/: ConfirmationDialog.cpp  ConfirmationDialog.hpp  DirectoryChooserWidget.cpp  DirectoryChooserWidget.hpp  MainWindow.cpp  MainWindow.hpp  MainWindowMisc.cpp  MainWindowMisc.hpp  WelcomeDialog.cpp
